--- a/index.html
+++ b/index.html
@@ -42,11 +42,10 @@
       </nav>
 
       <!-- Mobile Menu Button -->
-      <button id="mobile-menu-btn" class="md:hidden flex flex-col gap-1 w-6 h-6 justify-center items-center">
-        <span class="w-5 h-0.5 bg-gray-700 transition-all duration-300"></span>
-        <span class="w-5 h-0.5 bg-gray-700 transition-all duration-300"></span>
-        <span class="w-5 h-0.5 bg-gray-700 transition-all duration-300"></span>
-      </button>
+<!-- Mobile Menu Button - 기존 버튼을 이것으로 교체 -->
+<button id="mobile-menu-btn" class="md:hidden bg-blue-500 text-white px-4 py-2 rounded" onclick="toggleMenu()">
+  메뉴
+</button>
     </div>
 
     <!-- Mobile Navigation Menu -->
